API getAll + getSingle

--- a/blog_backend/appsettings.json
+++ b/blog_backend/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=postgres;Password=DigiMed123;Host=localhost;Port=5432;Database=blog;Pooling=true;"
+  }
 }
